--- a/homework2.html
+++ b/homework2.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>PigLatin Translate</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="piglatinstyle.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
   <h1>Intro to JS Template</h1>
-  <script src="scriptt.js"></script>
+  <script src="script.js.js"></script>
   <script> 
   documment.write("PigLatin Translate");
   console.log("a", "e", "1","o", "u");
