--- a/homework3.html
+++ b/homework3.html
@@ -24,7 +24,7 @@ const Student= grades.split(", ");
       highestStudent = "0"; 
        }
   }
-
+document.getElementBYId("highestGrade");
 console.log("The highest grade is:" + highestGrade + "by" + highestStudent);
   
 
