--- a/homework3.html
+++ b/homework3.html
@@ -5,26 +5,30 @@
 </head>
 <body>
   <h1>Student Grade</h1>
+  <div id="result"</div>
 
 <script>
-  const Students = document.getElementById("Students");
+ 
  const Students = "jim|25, sue|32, mary|34, ann|22, ted|28,frank|15, lisa|19, mike|30, ahn|26, vishaya|27";
 
-const Student= grades.split(", ");
+const Student= Students.split(", ");
 //split the string into an array of  name and grades entries.
  
  let  highestGrade = 0;
  let highestStudent = "Student"; 
 
-  for(let i = 0; i < Student.lenght; i++){
+  for(let i = 0; i < Student.length; i++){
     const student = Student[i].split("|");
-    const numericGrades = parseInt("Student[1]"); // convert the grades to a  number value.
+    const numericGrades = parseInt(student[1]); // convert the grades to a  number value.
     if(numericGrades > highestGrade){
       highestGrade = numericGrades;
-      highestStudent = "0"; 
+      highestStudent = student[0]; 
        }
   }
-document.getElementBYId("highestGrade");
+
+  const resultElement = document.getElementById("result");
+  resultElement.innerHTML = "The highest grade is:" + highestGrade + "by" + highestStudent;
+ 
 console.log("The highest grade is:" + highestGrade + "by" + highestStudent);
   
 
